--- a/tiddlywiki-bookmark.html
+++ b/tiddlywiki-bookmark.html
@@ -131,6 +131,11 @@
 Here is a short screencast that I did about using TiddlyWiki as a bookmark manager.  Tiddlywiki is a non-linear notebook that is free for download that works especially well using a Firefox and an add-on called Tiddlyfox.  Tiddly fox allows you to save the file through the browser.  It's a small, lightweight tool that you can take it with you or store it online.
 <br></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tA_1mgEeGps?rel=0" frameborder="0" allowfullscreen></iframe>
+
+<p><br></p>
+<h2>Have a comment?</h2>
+<p>So, what do you think? Did I miss anything?  Is any part unclear?</p>
+<p><a href="https://twitter.com/BillHertzing">Send me a message on Twitter</a></p>
         </div><!-- /.entry-content -->
     </article>
 </section>
@@ -173,63 +178,8 @@ Here is a short screencast that I did about using TiddlyWiki as a bookmark manag
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
     <li class="tag-4">
-        <a href="./tag/playlist.html">
-            <i class="icon-tag icon-large"></i>playlist
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/music.html">
-            <i class="icon-tag icon-large"></i>music
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/reflection.html">
-            <i class="icon-tag icon-large"></i>reflection
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/google.html">
-            <i class="icon-tag icon-large"></i>Google
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/texas.html">
-            <i class="icon-tag icon-large"></i>texas
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/bookmark.html">
-            <i class="icon-tag icon-large"></i>bookmark
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/light.html">
-            <i class="icon-tag icon-large"></i>light
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/hangout.html">
-            <i class="icon-tag icon-large"></i>hangout
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/lawn.html">
-            <i class="icon-tag icon-large"></i>lawn
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/game.html">
-            <i class="icon-tag icon-large"></i>game
+        <a href="./tag/protection.html">
+            <i class="icon-tag icon-large"></i>protection
         </a>
     </li>
     <li class="tag-4">
@@ -238,78 +188,8 @@ Here is a short screencast that I did about using TiddlyWiki as a bookmark manag
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/car.html">
-            <i class="icon-tag icon-large"></i>car
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/protection.html">
-            <i class="icon-tag icon-large"></i>protection
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/website.html">
-            <i class="icon-tag icon-large"></i>website
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/drink.html">
-            <i class="icon-tag icon-large"></i>drink
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/cleaning.html">
-            <i class="icon-tag icon-large"></i>cleaning
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/cloud.html">
-            <i class="icon-tag icon-large"></i>cloud
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/strengths.html">
-            <i class="icon-tag icon-large"></i>strengths
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
-        </a>
-    </li>
-    <li class="tag-4">
         <a href="./tag/modularity.html">
             <i class="icon-tag icon-large"></i>modularity
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/.html">
-            <i class="icon-tag icon-large"></i>
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/tv.html">
-            <i class="icon-tag icon-large"></i>tv
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/storage.html">
-            <i class="icon-tag icon-large"></i>storage
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/database.html">
-            <i class="icon-tag icon-large"></i>database
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
         </a>
     </li>
     <li class="tag-1">
@@ -318,18 +198,33 @@ Here is a short screencast that I did about using TiddlyWiki as a bookmark manag
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
+        <a href="./tag/storage.html">
+            <i class="icon-tag icon-large"></i>storage
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/voc.html">
-            <i class="icon-tag icon-large"></i>voc
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/google.html">
+            <i class="icon-tag icon-large"></i>Google
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/learning.html">
-            <i class="icon-tag icon-large"></i>learning
+        <a href="./tag/cleaning.html">
+            <i class="icon-tag icon-large"></i>cleaning
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/lawn.html">
+            <i class="icon-tag icon-large"></i>lawn
         </a>
     </li>
     <li class="tag-1">
@@ -338,8 +233,78 @@ Here is a short screencast that I did about using TiddlyWiki as a bookmark manag
         </a>
     </li>
     <li class="tag-4">
+        <a href="./tag/game.html">
+            <i class="icon-tag icon-large"></i>game
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/learning.html">
+            <i class="icon-tag icon-large"></i>learning
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/database.html">
+            <i class="icon-tag icon-large"></i>database
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/light.html">
+            <i class="icon-tag icon-large"></i>light
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/car.html">
+            <i class="icon-tag icon-large"></i>car
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/voc.html">
+            <i class="icon-tag icon-large"></i>voc
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/texas.html">
+            <i class="icon-tag icon-large"></i>texas
+        </a>
+    </li>
+    <li class="tag-4">
         <a href="./tag/launch.html">
             <i class="icon-tag icon-large"></i>launch
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/cloud.html">
+            <i class="icon-tag icon-large"></i>cloud
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/bookmark.html">
+            <i class="icon-tag icon-large"></i>bookmark
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/website.html">
+            <i class="icon-tag icon-large"></i>website
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/strengths.html">
+            <i class="icon-tag icon-large"></i>strengths
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/.html">
+            <i class="icon-tag icon-large"></i>
         </a>
     </li>
     <li class="tag-4">
@@ -347,14 +312,29 @@ Here is a short screencast that I did about using TiddlyWiki as a bookmark manag
             <i class="icon-tag icon-large"></i>traffic
         </a>
     </li>
+    <li class="tag-1">
+        <a href="./tag/hangout.html">
+            <i class="icon-tag icon-large"></i>hangout
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/data.html">
+            <i class="icon-tag icon-large"></i>data
+        </a>
+    </li>
     <li class="tag-4">
         <a href="./tag/coffee.html">
             <i class="icon-tag icon-large"></i>coffee
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
+    <li class="tag-4">
+        <a href="./tag/drink.html">
+            <i class="icon-tag icon-large"></i>drink
         </a>
     </li>
     <li class="tag-4">
@@ -363,8 +343,33 @@ Here is a short screencast that I did about using TiddlyWiki as a bookmark manag
         </a>
     </li>
     <li class="tag-4">
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
+        </a>
+    </li>
+    <li class="tag-4">
         <a href="./tag/yard-work.html">
             <i class="icon-tag icon-large"></i>yard work
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/reflection.html">
+            <i class="icon-tag icon-large"></i>reflection
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/tv.html">
+            <i class="icon-tag icon-large"></i>tv
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/playlist.html">
+            <i class="icon-tag icon-large"></i>playlist
         </a>
     </li>
     <li class="tag-4">
@@ -373,8 +378,8 @@ Here is a short screencast that I did about using TiddlyWiki as a bookmark manag
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/data.html">
-            <i class="icon-tag icon-large"></i>data
+        <a href="./tag/music.html">
+            <i class="icon-tag icon-large"></i>music
         </a>
     </li>
 
