--- a/archives.html
+++ b/archives.html
@@ -100,6 +100,8 @@
 <h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
+	<dt>Mon 08 June 2015</dt>
+	<dd><a href='tropical-music.html'>Tropical Music</a></dd>
 	<dt>Wed 06 May 2015</dt>
 	<dd><a href='tiddlywiki-bookmark.html'>Tiddlywiki Bookmark</a></dd>
 	<dt>Sat 02 May 2015</dt>
@@ -173,8 +175,13 @@
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
     <li class="tag-4">
-        <a href="./tag/protection.html">
-            <i class="icon-tag icon-large"></i>protection
+        <a href="./tag/storage.html">
+            <i class="icon-tag icon-large"></i>storage
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
         </a>
     </li>
     <li class="tag-4">
@@ -183,28 +190,8 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/modularity.html">
-            <i class="icon-tag icon-large"></i>modularity
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/storage.html">
-            <i class="icon-tag icon-large"></i>storage
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
+        <a href="./tag/cleaning.html">
+            <i class="icon-tag icon-large"></i>cleaning
         </a>
     </li>
     <li class="tag-1">
@@ -212,9 +199,14 @@
             <i class="icon-tag icon-large"></i>Google
         </a>
     </li>
+    <li class="tag-1">
+        <a href="./tag/cloud.html">
+            <i class="icon-tag icon-large"></i>cloud
+        </a>
+    </li>
     <li class="tag-4">
-        <a href="./tag/cleaning.html">
-            <i class="icon-tag icon-large"></i>cleaning
+        <a href="./tag/coffee.html">
+            <i class="icon-tag icon-large"></i>coffee
         </a>
     </li>
     <li class="tag-4">
@@ -227,14 +219,19 @@
             <i class="icon-tag icon-large"></i>san antonio
         </a>
     </li>
-    <li class="tag-4">
-        <a href="./tag/game.html">
-            <i class="icon-tag icon-large"></i>game
+    <li class="tag-1">
+        <a href="./tag/playlist.html">
+            <i class="icon-tag icon-large"></i>playlist
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
+        <a href="./tag/reflection.html">
+            <i class="icon-tag icon-large"></i>reflection
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/hangout.html">
+            <i class="icon-tag icon-large"></i>hangout
         </a>
     </li>
     <li class="tag-4">
@@ -243,18 +240,88 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/database.html">
-            <i class="icon-tag icon-large"></i>database
+        <a href="./tag/yard-work.html">
+            <i class="icon-tag icon-large"></i>yard work
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/light.html">
-            <i class="icon-tag icon-large"></i>light
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/modularity.html">
+            <i class="icon-tag icon-large"></i>modularity
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/drink.html">
+            <i class="icon-tag icon-large"></i>drink
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/data.html">
+            <i class="icon-tag icon-large"></i>data
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/game.html">
+            <i class="icon-tag icon-large"></i>game
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/protection.html">
+            <i class="icon-tag icon-large"></i>protection
         </a>
     </li>
     <li class="tag-4">
         <a href="./tag/car.html">
             <i class="icon-tag icon-large"></i>car
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/bookmark.html">
+            <i class="icon-tag icon-large"></i>bookmark
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/website.html">
+            <i class="icon-tag icon-large"></i>website
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/music.html">
+            <i class="icon-tag icon-large"></i>music
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/tropical.html">
+            <i class="icon-tag icon-large"></i>tropical
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/database.html">
+            <i class="icon-tag icon-large"></i>database
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/strengths.html">
+            <i class="icon-tag icon-large"></i>strengths
         </a>
     </li>
     <li class="tag-4">
@@ -268,33 +335,13 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/launch.html">
-            <i class="icon-tag icon-large"></i>launch
+        <a href="./tag/tv.html">
+            <i class="icon-tag icon-large"></i>tv
         </a>
     </li>
     <li class="tag-1">
-        <a href="./tag/cloud.html">
-            <i class="icon-tag icon-large"></i>cloud
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/bookmark.html">
-            <i class="icon-tag icon-large"></i>bookmark
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/website.html">
-            <i class="icon-tag icon-large"></i>website
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/strengths.html">
-            <i class="icon-tag icon-large"></i>strengths
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
         </a>
     </li>
     <li class="tag-4">
@@ -307,34 +354,9 @@
             <i class="icon-tag icon-large"></i>traffic
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/hangout.html">
-            <i class="icon-tag icon-large"></i>hangout
-        </a>
-    </li>
     <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/data.html">
-            <i class="icon-tag icon-large"></i>data
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/coffee.html">
-            <i class="icon-tag icon-large"></i>coffee
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/drink.html">
-            <i class="icon-tag icon-large"></i>drink
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
         </a>
     </li>
     <li class="tag-4">
@@ -342,39 +364,24 @@
             <i class="icon-tag icon-large"></i>security
         </a>
     </li>
+    <li class="tag-4">
+        <a href="./tag/launch.html">
+            <i class="icon-tag icon-large"></i>launch
+        </a>
+    </li>
     <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/yard-work.html">
-            <i class="icon-tag icon-large"></i>yard work
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/reflection.html">
-            <i class="icon-tag icon-large"></i>reflection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/tv.html">
-            <i class="icon-tag icon-large"></i>tv
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/playlist.html">
-            <i class="icon-tag icon-large"></i>playlist
+        <a href="./tag/light.html">
+            <i class="icon-tag icon-large"></i>light
         </a>
     </li>
     <li class="tag-4">
         <a href="./tag/housekeeping.html">
             <i class="icon-tag icon-large"></i>housekeeping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/music.html">
-            <i class="icon-tag icon-large"></i>music
         </a>
     </li>
 
